lab3/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | Specifier error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | /* empty */

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | ID error RP
   23       | ID LP error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC
   28       | LC DefList error RC

   29 StmtList: Stmt StmtList
   30         | /* empty */

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | IF LP Exp RP error ELSE Stmt
   37     | WHILE LP Exp RP Stmt
   38     | IF LP error SEMI
   39     | WHILE LP error RP Stmt
   40     | error SEMI

   41 DefList: Def DefList
   42        | /* empty */

   43 Def: Specifier DecList SEMI
   44    | Specifier error SEMI

   45 DecList: Dec
   46        | Dec COMMA DecList

   47 Dec: VarDec
   48    | VarDec ASSIGNOP Exp

   49 Exp: Exp ASSIGNOP Exp
   50    | Exp AND Exp
   51    | Exp OR Exp
   52    | Exp RELOP Exp
   53    | Exp PLUS Exp
   54    | Exp MINUS Exp
   55    | Exp STAR Exp
   56    | Exp DIV Exp
   57    | LP Exp RP
   58    | MINUS Exp
   59    | NOT Exp
   60    | ID LP Args RP
   61    | ID LP RP
   62    | Exp LB Exp RB
   63    | Exp DOT ID
   64    | ID
   65    | INT
   66    | FLOAT
   67    | LP error RP
   68    | Exp LB error RB

   69 Args: Exp COMMA Args
   70     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 22 23 28 36 38 39 40 44 67 68
INT (258) 19 65
FLOAT (259) 66
ID (260) 15 17 18 20 21 22 23 60 61 63 64
SEMI (261) 4 5 7 8 31 33 38 40 43 44
COMMA (262) 10 24 46 69
ASSIGNOP (263) 48 49
RELOP (264) 52
PLUS (265) 53
MINUS (266) 54 58
STAR (267) 55
DIV (268) 56
AND (269) 50
OR (270) 51
DOT (271) 63
NOT (272) 59
TYPE (273) 11
LP (274) 20 21 23 34 35 36 37 38 39 57 60 61 67
RP (275) 20 21 22 23 34 35 36 37 39 57 60 61 67
LB (276) 19 62 68
RB (277) 19 62 68
LC (278) 13 27 28
RC (279) 13 27 28
STRUCT (280) 13 14
RETURN (281) 33
IF (282) 34 35 36 38
ELSE (283) 35 36
WHILE (284) 37 39
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (35)
    on left: 9 10, on right: 4 10
Specifier (36)
    on left: 11 12, on right: 4 5 6 7 8 26 43 44
StructSpecifier (37)
    on left: 13 14, on right: 12
OptTag (38)
    on left: 15 16, on right: 13
Tag (39)
    on left: 17, on right: 14
VarDec (40)
    on left: 18 19, on right: 9 10 19 26 47 48
FunDec (41)
    on left: 20 21 22 23, on right: 6 7
VarList (42)
    on left: 24 25, on right: 20 24
ParamDec (43)
    on left: 26, on right: 24 25
CompSt (44)
    on left: 27 28, on right: 6 32
StmtList (45)
    on left: 29 30, on right: 27 29
Stmt (46)
    on left: 31 32 33 34 35 36 37 38 39 40, on right: 29 34 35 36 37
    39
DefList (47)
    on left: 41 42, on right: 13 27 28 41
Def (48)
    on left: 43 44, on right: 41
DecList (49)
    on left: 45 46, on right: 43 46
Dec (50)
    on left: 47 48, on right: 45 46
Exp (51)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68, on right: 31 33 34 35 36 37 48 49 50 51 52 53 54 55 56 57
    58 59 62 63 68 69 70
Args (52)
    on left: 69 70, on right: 60 69


state 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


state 1

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


state 2

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


state 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


state 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
    8       | Specifier . error SEMI

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


state 7

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


state 8

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


state 9

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


state 10

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


state 11

    0 $accept: Program $end .

    $default  accept


state 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 13

    8 ExtDef: Specifier error . SEMI

    SEMI  shift, and go to state 20


state 14

   18 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP
   22       | ID . error RP
   23       | ID . LP error RP

    error  shift, and go to state 21
    LP     shift, and go to state 22

    SEMI   reduce using rule 18 (VarDec)
    COMMA  reduce using rule 18 (VarDec)
    LB     reduce using rule 18 (VarDec)


state 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 23


state 17

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 9 (ExtDecList)


state 18

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 26
    LC    shift, and go to state 27

    CompSt  go to state 28


state 19

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 30
    Def              go to state 31


state 20

    8 ExtDef: Specifier error SEMI .

    $default  reduce using rule 8 (ExtDef)


state 21

   22 FunDec: ID error . RP

    RP  shift, and go to state 32


state 22

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP
   23       | ID LP . error RP

    error   shift, and go to state 33
    TYPE    shift, and go to state 1
    RP      shift, and go to state 34
    STRUCT  shift, and go to state 2

    Specifier        go to state 35
    StructSpecifier  go to state 7
    VarList          go to state 36
    ParamDec         go to state 37


state 23

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 24

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 38

    ExtDecList  go to state 39
    VarDec      go to state 17


state 25

   19 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 40


state 26

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


state 27

   27 CompSt: LC . DefList StmtList RC
   28       | LC . DefList error RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 41
    Def              go to state 31


state 28

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


state 29

   43 Def: Specifier . DecList SEMI
   44    | Specifier . error SEMI

    error  shift, and go to state 42
    ID     shift, and go to state 38

    VarDec   go to state 43
    DecList  go to state 44
    Dec      go to state 45


state 30

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 46


state 31

   41 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 47
    Def              go to state 31


state 32

   22 FunDec: ID error RP .

    $default  reduce using rule 22 (FunDec)


state 33

   23 FunDec: ID LP error . RP

    RP  shift, and go to state 48


state 34

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


state 35

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 38

    VarDec  go to state 49


state 36

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 50


state 37

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 51

    $default  reduce using rule 25 (VarList)


state 38

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


state 39

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


state 40

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 52


state 41

   27 CompSt: LC DefList . StmtList RC
   28       | LC DefList . error RC

    error   shift, and go to state 53
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 27
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 64
    Stmt      go to state 65
    Exp       go to state 66


state 42

   44 Def: Specifier error . SEMI

    SEMI  shift, and go to state 67


state 43

   19 VarDec: VarDec . LB INT RB
   47 Dec: VarDec .
   48    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 68
    LB        shift, and go to state 25

    $default  reduce using rule 47 (Dec)


state 44

   43 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 69


state 45

   45 DecList: Dec .
   46        | Dec . COMMA DecList

    COMMA  shift, and go to state 70

    $default  reduce using rule 45 (DecList)


state 46

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


state 47

   41 DefList: Def DefList .

    $default  reduce using rule 41 (DefList)


state 48

   23 FunDec: ID LP error RP .

    $default  reduce using rule 23 (FunDec)


state 49

   19 VarDec: VarDec . LB INT RB
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 26 (ParamDec)


state 50

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


state 51

   24 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 35
    StructSpecifier  go to state 7
    VarList          go to state 71
    ParamDec         go to state 37


state 52

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


state 53

   28 CompSt: LC DefList error . RC
   40 Stmt: error . SEMI

    SEMI  shift, and go to state 72
    RC    shift, and go to state 73


state 54

   65 Exp: INT .

    $default  reduce using rule 65 (Exp)


state 55

   66 Exp: FLOAT .

    $default  reduce using rule 66 (Exp)


state 56

   60 Exp: ID . LP Args RP
   61    | ID . LP RP
   64    | ID .

    LP  shift, and go to state 74

    $default  reduce using rule 64 (Exp)


state 57

   58 Exp: MINUS . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 75


state 58

   59 Exp: NOT . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 76


state 59

   57 Exp: LP . Exp RP
   67    | LP . error RP

    error  shift, and go to state 77
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 78


state 60

   33 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 79


state 61

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt
   36     | IF . LP Exp RP error ELSE Stmt
   38     | IF . LP error SEMI

    LP  shift, and go to state 80


state 62

   37 Stmt: WHILE . LP Exp RP Stmt
   39     | WHILE . LP error RP Stmt

    LP  shift, and go to state 81


state 63

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


state 64

   27 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 82


state 65

   29 StmtList: Stmt . StmtList

    error   shift, and go to state 83
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 27
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 84
    Stmt      go to state 65
    Exp       go to state 66


state 66

   31 Stmt: Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    SEMI      shift, and go to state 85
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95


state 67

   44 Def: Specifier error SEMI .

    $default  reduce using rule 44 (Def)


state 68

   48 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 96


state 69

   43 Def: Specifier DecList SEMI .

    $default  reduce using rule 43 (Def)


state 70

   46 DecList: Dec COMMA . DecList

    ID  shift, and go to state 38

    VarDec   go to state 43
    DecList  go to state 97
    Dec      go to state 45


state 71

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


state 72

   40 Stmt: error SEMI .

    $default  reduce using rule 40 (Stmt)


state 73

   28 CompSt: LC DefList error RC .

    $default  reduce using rule 28 (CompSt)


state 74

   60 Exp: ID LP . Args RP
   61    | ID LP . RP

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    RP     shift, and go to state 98

    Exp   go to state 99
    Args  go to state 100


state 75

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   58    | MINUS Exp .
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    STAR  shift, and go to state 90
    DIV   shift, and go to state 91
    DOT   shift, and go to state 94
    LB    shift, and go to state 95

    $default  reduce using rule 58 (Exp)


state 76

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   59    | NOT Exp .
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    DOT  shift, and go to state 94
    LB   shift, and go to state 95

    $default  reduce using rule 59 (Exp)


state 77

   67 Exp: LP error . RP

    RP  shift, and go to state 101


state 78

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   57    | LP Exp . RP
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    RP        shift, and go to state 102
    LB        shift, and go to state 95


state 79

   33 Stmt: RETURN Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    SEMI      shift, and go to state 103
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95


state 80

   34 Stmt: IF LP . Exp RP Stmt
   35     | IF LP . Exp RP Stmt ELSE Stmt
   36     | IF LP . Exp RP error ELSE Stmt
   38     | IF LP . error SEMI

    error  shift, and go to state 104
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 105


state 81

   37 Stmt: WHILE LP . Exp RP Stmt
   39     | WHILE LP . error RP Stmt

    error  shift, and go to state 106
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 107


state 82

   27 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 27 (CompSt)


state 83

   40 Stmt: error . SEMI

    SEMI  shift, and go to state 72


state 84

   29 StmtList: Stmt StmtList .

    $default  reduce using rule 29 (StmtList)


state 85

   31 Stmt: Exp SEMI .

    $default  reduce using rule 31 (Stmt)


state 86

   49 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 108


state 87

   52 Exp: Exp RELOP . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 109


state 88

   53 Exp: Exp PLUS . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 110


state 89

   54 Exp: Exp MINUS . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 111


state 90

   55 Exp: Exp STAR . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 112


state 91

   56 Exp: Exp DIV . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 113


state 92

   50 Exp: Exp AND . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 114


state 93

   51 Exp: Exp OR . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 115


state 94

   63 Exp: Exp DOT . ID

    ID  shift, and go to state 116


state 95

   62 Exp: Exp LB . Exp RB
   68    | Exp LB . error RB

    error  shift, and go to state 117
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 118


state 96

   48 Dec: VarDec ASSIGNOP Exp .
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95

    $default  reduce using rule 48 (Dec)


state 97

   46 DecList: Dec COMMA DecList .

    $default  reduce using rule 46 (DecList)


state 98

   61 Exp: ID LP RP .

    $default  reduce using rule 61 (Exp)


state 99

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB
   69 Args: Exp . COMMA Args
   70     | Exp .

    COMMA     shift, and go to state 119
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95

    $default  reduce using rule 70 (Args)


state 100

   60 Exp: ID LP Args . RP

    RP  shift, and go to state 120


state 101

   67 Exp: LP error RP .

    $default  reduce using rule 67 (Exp)


state 102

   57 Exp: LP Exp RP .

    $default  reduce using rule 57 (Exp)


state 103

   33 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 33 (Stmt)


state 104

   38 Stmt: IF LP error . SEMI

    SEMI  shift, and go to state 121


state 105

   34 Stmt: IF LP Exp . RP Stmt
   35     | IF LP Exp . RP Stmt ELSE Stmt
   36     | IF LP Exp . RP error ELSE Stmt
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    RP        shift, and go to state 122
    LB        shift, and go to state 95


state 106

   39 Stmt: WHILE LP error . RP Stmt

    RP  shift, and go to state 123


state 107

   37 Stmt: WHILE LP Exp . RP Stmt
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    RP        shift, and go to state 124
    LB        shift, and go to state 95


state 108

   49 Exp: Exp . ASSIGNOP Exp
   49    | Exp ASSIGNOP Exp .
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95

    $default  reduce using rule 49 (Exp)


state 109

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   52    | Exp RELOP Exp .
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    PLUS   shift, and go to state 88
    MINUS  shift, and go to state 89
    STAR   shift, and go to state 90
    DIV    shift, and go to state 91
    DOT    shift, and go to state 94
    LB     shift, and go to state 95

    $default  reduce using rule 52 (Exp)


state 110

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   53    | Exp PLUS Exp .
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    STAR  shift, and go to state 90
    DIV   shift, and go to state 91
    DOT   shift, and go to state 94
    LB    shift, and go to state 95

    $default  reduce using rule 53 (Exp)


state 111

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   54    | Exp MINUS Exp .
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    STAR  shift, and go to state 90
    DIV   shift, and go to state 91
    DOT   shift, and go to state 94
    LB    shift, and go to state 95

    $default  reduce using rule 54 (Exp)


state 112

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   55    | Exp STAR Exp .
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    DOT  shift, and go to state 94
    LB   shift, and go to state 95

    $default  reduce using rule 55 (Exp)


state 113

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   56    | Exp DIV Exp .
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    DOT  shift, and go to state 94
    LB   shift, and go to state 95

    $default  reduce using rule 56 (Exp)


state 114

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   50    | Exp AND Exp .
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB
